# soficca_core_engine

./: .env.example  .gitignore  CONTRACT.md  EVALUATION.md  POLICYLOG.md  README.md  evaluation_report.json  golden_cases.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_evaluation.py  tailwind.config.ts  tsconfig.json
api/: main.py
api/routers/: cardio_extract_router.py  cardio_persistence_router.py  cardio_pilot_router.py  dermatology_router.py  pen_router.py
contract/: decision_report_v0_3.schema.json
docs/: cardio_pilot_database_persistence_plan.md  cardio_pilot_database_schema.sql  cardio_pilot_database_setup.md  cardio_pilot_final_persisted_flow_qa.md  pen_backend_stability.md
examples/: 01_missing_info.json  02_decided_safe.json  02_decided_safe_output.json  03_safety_escalation.json  cardio_v1_manual_requests.json  cardio_v1_scenarios.json
migrations/: 001_cardio_pilot_initial_schema.sql
public/: deploy-check.txt
rules/: dermatology_rules.py
schemas/: dermatology_schemas.py
scripts/: run_migrations.py  test_cardio_ai_extraction_manual.py  test_db_connection.py  test_full_persisted_flow.py  test_pen_contract_gate.sh  test_persistence_endpoints.py  test_repository_roundtrip.py
src/app/: globals.css  layout.tsx  page.tsx
src/cardio_triage_v1/: __init__.py  (+8 more)
tests/: test_api_cardio_endpoint.py  test_cardio_contract.py  test_cardio_extract_endpoint.py  test_cardio_persistence_endpoints.py  test_cardio_pilot_endpoint.py  test_cardio_pilot_repository.py  test_engine_v03.py  test_invariants.py
(+80 files in other folders)
